@@ -31,3 +31,4 @@ dependencies:
       - parmed
       - msmb_theme==1.2.0
       - sphinx-sitemap==1.0.2
+      - packaging
